[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "poke_api"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.103.0",
  "uvicorn==0.22.0",
  "requests==2.31.0",
  "httpx==0.24.1",
  "redis==5.0.1",
  "matplotlib==3.8.0",
]

[project.optional-dependencies]
test = [
  "pytest==7.4.3",
  "pytest-mock==3.12.0",
  "pytest-cov[all]"
]
lint = [
  "flake8",
  "mypy",
  "pylint",
  "types-requests",
]
dev = [
  "poke-api[test]",
  "poke-api[lint]"
]

[tool.setuptools]
packages = ["api"]
